cmake_minimum_required(VERSION 3.8)
project(can_bridge)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(can_msgs REQUIRED)

add_executable(can_bridge_node src/can_bridge.cpp)
ament_target_dependencies(can_bridge_node rclcpp can_msgs)

install(TARGETS
  can_bridge_node
  DESTINATION lib/${PROJECT_NAME})

ament_package()